# estrurtura_workshop_1

./: 404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
about/: index.html
app/: __init__.py  main.py
app/pipeline/: __init__.py  extract.py  load.py  teste_request.py  transform.py
data/output/: output.xlsx
docs/: index.md
search/: search_index.json
site/: index.html
site/search/: search_index.json
tests/: __init__.py  test_pipeline.py
