[tool.poetry]
name = "estrutura-projeto-1"
version = "0.1.0"
description = "meu projeto de ETL"
authors = ["Jorge Luiz da Silva <jlsilva01@yahoo.com.br>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.3"
pandas = "^2.1.4"
openpyxl = "^3.1.2"
pytest = "^7.4.3"
isort = "^5.13.2"
pydocstyle = "^6.3.0"
pip-audit = "^2.6.2"
pip = "^23.3.2"
taskipy = "^1.12.2"
mkdocs = "^1.5.3"
mkdocstrings-python = "^1.7.5"
mkdocs-material = "^9.5.2"
pymdown-extensions = "^10.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
format = "isort . && blue ."
test = "poetry run pytest -v"
run = "python app/main.py"
